--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,7 @@
       <option value="1.11">1.11</option>
       <option value="1.12">1.12</option>
       <option value="1.13">1.13</option>
-      <option value="1.14">1.14</option>
+      <option value="1.14" disabled>1.14 (not yet supported)</option>
     </select>
 
     <button id="start">
