--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,7 @@
     <h3 id="ip"></h3>
     <div class="stats">
       <p>Stats:</p>
+      <p>Players connected: <span id="players">?</span></p>
       <p>Chunk generated: <span id="chunks">?</span></p>
       <p>Storage usage: <span id="storage">?</span></p>
     </div>
