--- a/client/index.html
+++ b/client/index.html
@@ -75,7 +75,8 @@
     <div class="stats">
       <p>Stats:</p>
       <p>Players connected: <span id="players">?</span></p>
-      <p>Chunk generated: <span id="chunks">?</span></p>
+      <p>Loaded chunks: <span id="chunks">?</span></p>
+      <p>CPU usage: <span id="cpu">?</span></p>
       <p>Storage usage: <span id="storage">?</span></p>
     </div>
   </div>
