--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,7 @@
 
     <label for="generator">World generator</label>
     <select id="generator" class="mb">
+      <option value="minecraft">minecraft</option>
       <option value="grass">grass</option>
       <option value="nether">nether</option>
       <option value="all_the_blocks">all_the_blocks</option>
