--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,9 @@
       <option value="superflat">superflat</option>
     </select>
 
+    <label for="seed">Seed</label>
+    <input type="text" id="seed" value="Cauldron.JS" class="mb" />
+
     <button id="start">
       Start server
     </button>
