--- a/client/index.html
+++ b/client/index.html
@@ -34,8 +34,11 @@
       <option value="1.9">1.9</option>
       <option value="1.10">1.10</option>
       <option value="1.11">1.11</option>
+      <option value="1.11.2">1.11.2</option>
       <option value="1.12">1.12</option>
+      <option value="1.12.2" selected>1.12.2</option>
       <option value="1.13">1.13</option>
+      <option value="1.13.2">1.13.2</option>
       <option value="1.14" disabled>1.14 (not yet supported)</option>
     </select>
 
