Add loading text

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,9 @@
   <h4>
     Minecraft Server in your browser
   </h4>
+  <div id="loading">
+    <h3>Loading server files...</h3>
+  </div>
   <div id="start-server" style="display:none;">
     <p>Please select your settings and start your server.</p>
 
